# ChatBot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  settings.py
api/: .dockerignore  Dockerfile  api.py  pyproject.toml  settings.py
api/db/: db.py  tables.py
bot/: Dockerfile  __main__.py  core.py  create_base.py  pyproject.toml  settings.py
bot/core/: __main__.py  core.py
db/: database.py  db.py
